<resources>
    <string name="app_name">Sprint4</string>

    <!-- Fragmetn balnk -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TOOLBAR TITLES -->
    <string name="toolbar_title_contact">Contacts</string>
    <string name="toolbar_title_add_contact">Add contact</string>
    <string name="toolbar_title_detail">Person name</string>
    <string name="toolbar_title_favourites">Favourites</string>
    <string name="toolbar_title_settings">Settings</string>

    <!-- Bottom Bar Navigation -->
    <string name="bottom_nar_navigation_contacts">Contacts</string>
    <string name="bottom_bar_navigation_favourites">Favourites</string>

    <!-- Add Contact screen -->
    <string name="add_contact_screen_name_hint">First name</string>
    <string name="add_contact_screen_last_name_hint">Last name</string>
    <string name="add_contact_screen_date_of_birth_hint">Date of birth</string>
    <string name="add_contact_screen_date_of_birth_title_dialog">Pick date</string>
    <string name="add_contact_screen_favourite_color_hint">Favourite color</string>
    <string name="add_contact_screen_favourite_sport_hint">Favourite sport</string>
    <string name="add_contact_screen_latitude_hint">Latitude</string>
    <string name="add_contact_screen_longitude_hint">Longitude</string>
    <string name="add_contact_screen_get_current_location">Get location</string>
    <string name="add_contact_screen_button_add">Add</string>
    <string name="add_contact_screen_tv_favourite_color">Favourite color</string>
    <string name="toast_contact_added">Contact added</string>

    <!-- Contacts Screen -->
    <string name="contacts_screen_content_description_fab">Add contacts</string>
    <string name="contacts_screen_search_view_hint">Search</string>

    <!-- Color picker dialog -->
    <string name="dialog_select_color_title">Pick color</string>
    <string name="dialog_color_picker_toast_dont_save_color">Color doesn\'t saved</string>
    <string name="dialog_color_picker_toast_save_color">Color saved</string>

    <!-- Common dialogs buttons -->
    <string name="btn_cancel_text">Cancel</string>
    <string name="btn_ok_text">OK</string>

    <!-- ARGB capitalizes -->
    <string name="argb_alpha">α</string>
    <string name="argb_blue">B</string>
    <string name="argb_green">G</string>
    <string name="argb_red">R</string>

    <!-- Detail Screen  -->
    <string name="detail_screen_favourite_color">Favourite color: </string>
    <string name="detail_screen_favourite_sport">Favourite sport: </string>

    <!-- Row Contacts List -->
    <string name="row_contact_ic_delete_description">Delete</string>
    <string name="row_contact_ic_add_favourite_description">Add to favourites</string>

    <!-- Permissions -->
    <string name="toast_permission_accepted">Permission accepted</string>
    <string name="toast_permission_rejected">Permission rejected</string>

    <!-- Settings Screen -->
    <string name="settings_screen_select_theme">Theme</string>
    <string name="settings_screen_theme_light">light</string>
    <string name="settings_screen_theme_dark">dark</string>
    <string name="settings_screen_theme_system">System</string>

    <string name="settings_screen_select_language">Language</string>
    <string name="settings_screen_language_spanish">Spanish</string>
    <string name="settings_screen_language_english">English</string>

    <!-- SPORTS -->
    <!--
    <string name="sport_swimming">Natación</string>
    <string name="sport_soccer">Fútbol</string>
    <string name="sport_volleyball">VolleyBall</string>
    <string name="sport_basket">Baloncesto</string>
    <string name="sport_tennis">Tenis</string>
    <string name="sport_badminton">Badminton</string>
    <string name="sport_baseball">Béisbol</string>
    <string name="sport_handball">Balonmano</string>
    <string name="sport_hockey">Hockey</string>
    <string name="sport_rugby">Rugby</string>
    -->
</resources>