<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context=".presentation.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/rgTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/rgTheme"
            android:layout_marginHorizontal="8dp"
            android:text="@string/settings_screen_select_theme" />

        <RadioGroup
            android:id="@+id/rgTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvTheme"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbLight"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_theme_light" />

            <RadioButton
                android:id="@+id/rbDark"
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_theme_dark" />

            <RadioButton
                android:id="@+id/rbSystem"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_theme_system" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/rgLanguage"
            app:layout_constraintTop_toTopOf="@id/rgLanguage"
            android:layout_marginHorizontal="8dp"
            android:text="@string/settings_screen_select_language" />

        <RadioGroup
            android:id="@+id/rgLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvLanguage"
            app:layout_constraintTop_toBottomOf="@id/rgTheme"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbEnglish"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_language_english" />

            <RadioButton
                android:id="@+id/rbSpanish"
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_screen_language_spanish" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>