<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        android:text="@string/dialog_select_color_title" />

    <TextView
        android:id="@+id/tvRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/argb_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDialog" />

    <SeekBar
        android:id="@+id/sbRed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:max="255"
        android:progress="0"
        android:progressBackgroundTint="@color/red"
        android:progressTint="@color/red"
        android:thumbTint="@color/red"
        app:layout_constraintEnd_toStartOf="@id/tvRGBNumberRed"
        app:layout_constraintStart_toEndOf="@id/tvRed"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDialog" />


    <TextView
        android:id="@+id/tvRGBNumberRed"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sbRed"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDialog" />

    <TextView
        android:id="@+id/tvGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/argb_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRed" />

    <SeekBar
        android:id="@+id/sbGreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:max="255"
        android:progress="0"
        android:progressBackgroundTint="@color/green"
        android:progressTint="@color/green"
        android:thumbTint="@color/green"
        app:layout_constraintEnd_toStartOf="@id/tvRGBNumberGreen"
        app:layout_constraintStart_toEndOf="@id/tvGreen"
        app:layout_constraintTop_toBottomOf="@id/tvRed" />

    <TextView
        android:id="@+id/tvRGBNumberGreen"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sbGreen"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvRed" />

    <TextView
        android:id="@+id/tvBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/argb_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGreen" />

    <SeekBar
        android:id="@+id/sbBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:max="255"
        android:progressBackgroundTint="@color/blue"
        android:progressTint="@color/blue"
        android:thumbTint="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/tvRGBNumberBlue"
        app:layout_constraintStart_toEndOf="@id/tvBlue"
        app:layout_constraintTop_toBottomOf="@id/tvGreen" />

    <TextView
        android:id="@+id/tvRGBNumberBlue"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sbGreen"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvGreen" />

    <TextView
        android:id="@+id/tvAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/argb_alpha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBlue" />

    <SeekBar
        android:id="@+id/sbTransparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:max="100"
        android:progress="100"
        android:progressBackgroundTint="@color/colorPrimary"
        android:progressTint="@color/colorPrimary"
        android:thumbTint="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/tvRGBNumberTransparent"
        app:layout_constraintStart_toEndOf="@id/tvAlpha"
        app:layout_constraintTop_toBottomOf="@id/tvBlue" />


    <TextView
        android:id="@+id/tvRGBNumberTransparent"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sbGreen"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvBlue" />

    <View
        android:id="@+id/colorSelected"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_color_selected"
        android:layout_marginVertical="@dimen/marginVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlpha"
        tools:background="@color/colorOnSecondary" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="@dimen/buttons_width_ok_cancel"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/marginVertical"
        android:text="@string/btn_ok_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorSelected" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/buttons_width_ok_cancel"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_text"
        android:layout_marginVertical="@dimen/marginVertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/colorSelected" />

</androidx.constraintlayout.widget.ConstraintLayout>